# matryx-gl

./: .gitignore  CMakeLists.txt
src/: Canvas.cpp  Canvas.cxx  Canvas.hpp  Canvas.hxx  FrameTimer.cpp  FrameTimer.cxx  FrameTimer.hpp  FrameTimer.hxx  Matrix.cpp  Matrix.cxx  Matrix.hpp  Matrix.hxx  MatrixContext.hpp  MatrixContext.hxx  Scene.cpp  Scene.cxx  Scene.hpp  Scene.hxx  canvas.cxx  canvas.hxx  main.cpp  main.cxx  matrix.cxx  matrix.hxx
src/scenes/: WatermelonPlasmaScene.cpp  WatermelonPlasmaScene.cxx  WatermelonPlasmaScene.hpp  WatermelonPlasmaScene.hxx  WaveScene.cpp  WaveScene.hpp
